# usdapipline

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  harness.yaml  pyproject.toml  requirements-lock.txt  seed.yaml
api/: deps.py  main.py  scheduler.py
api/routers/: collector.py  grain.py  images.py  reports.py  schedule.py  verification.py
collector/: __main__.py  run.py
collector/m1_structured/: ers_feedgrains.py  export_sales.py  gtr.py  psd.py  quickstats.py  usdm_drought.py  wasde.py
collector/m2_reports/: wasde_pdf.py  wwcb.py  wwcb_narrative.py
collector/m3_images/: image_filter.py  ocr_classifier.py  wwcb_images.py
common/: archiver.py  curation.py  data_access.py  esmis.py  harness_config.py  http.py  manifest.py  schema.py  storage.py  verification.py
dashboard/: .env.example  package-lock.json
dashboard/src/app/: layout.tsx  page.tsx
dashboard/src/app/admin/: page.tsx
dashboard/src/app/grain/: page.tsx
dashboard/src/app/images/: page.tsx
dashboard/src/components/: grain-chart.tsx  nav-bar.tsx
dashboard/src/lib/: api.ts
docs/: autopsy_stage1-3.md  changelog_curation_tool.md  changelog_migration_20260703.md  data-access.md  image-pipeline.md  postmortem_2026-07_usda_outage.md
scripts/: portable_checklist.md  setup_env.ps1  setup_env.sh  verify_pipeline.py
