[project]
name = "usda-grain-pipeline"
version = "0.1.0"
description = "USDA grain data collection pipeline for CBOT futures price prediction"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31,<3",
    "pandas>=2.1,<3",
    "openpyxl>=3.1,<4",
    "pyarrow>=14.0,<20",
    "pydantic>=2.5,<3",
    "pandera>=0.18,<1",
    "python-dotenv>=1.0,<2",
    "tenacity>=8.2,<10",
    "pymupdf>=1.24,<2",
    "Pillow>=10.0,<12",
]

[project.scripts]
usda-collect = "collector.run:main"
